# usecase/sku/dto.go
@@ -1,0 +1,7 @@
+package sku
+
+type CreateDto struct {
+	Name  string `json:"name" validate:"required"`
+	Stock int    `json:"stock" validate:"required"`
+	Price int    `json:"price" validate:"required"`
+}
