# usecase/transaction/dto.go
@@ -1,0 +1,10 @@
+package transaction
+
+type CheckoutDto struct {
+	Items []ItemDto `json:"items" validate:"required"`
+}
+
+type ItemDto struct {
+	ID       string `json:"id" `
+	Quantity int    `json:"quantity" `
+}
